fix form layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,4 @@
   }
 }
 
-.leaflet-container { width: 66%; height: 100vh; margin-left: auto; margin-right: auto;}
+.leaflet-container { width: 66%; height: 20vh; margin-left: auto; margin-right: auto;}
